--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -42,7 +42,7 @@ h2, label {
     color: #1E1E1E;
 }
 .anim {
-    animation: bounce 2s ease infinite;
+    animation: bounce 2s ease normal;
 }
 @keyframes bounce {
     0%, 20%, 50%, 80%, 100% {
@@ -54,4 +54,12 @@ h2, label {
     60% {
         transform: translateY(-2px);
     }
+}
+
+.dev {
+    font-size: 5px;
+}
+
+i.bi-exclamation-circle-fill {
+    color: #ff9500;
 }
